--- a/main.html
+++ b/main.html
@@ -8,6 +8,19 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+  <nav>
+	  <ul>
+		  <li><a href="https://en.wikipedia.org/wiki/New_Delhi">Home</a></li>
+		  <li><a href="https://unsplash.com/s/photos/dog">About us</a></li>
+		  <li><a href="https://www.w3schools.com/html/html_quotation_elements.asp">Contact us</a></li>
+	  </ul>
+  </nav>
+
+	<h1>3 random images</h1>
+	<img src="https://picsum.photos/id/123/200/300" alt="Random image">
+	<img src="https://picsum.photos/id/124/200/300" alt="Random image">
+	<img src="https://picsum.photos/id/125/200/300" alt="Random image">
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
